# SUKL-mcp

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE 2.md  CLAUDE.md  CONTRIBUTING.md  DEFECTS_ANALYSIS.md  DEFECTS_ANALYSIS_ARCHIVE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_FIX.md  Dockerfile  FASTMCP_CLOUD_FIX.md  FASTMCP_COMPLIANCE_REPORT.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_BACKLOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPRAVY_2025_01_08.md  PRELIMINARY_TEST_FINDINGS.md  PRODUCTION_TEST_REPORT.md  PRODUCT_SPECIFICATION.md  README.md  SMITHERY_DEPLOYMENT.md  TESTOVANI_FAZE1_FAZE2.md  VALIDATION_REPORT.md  VYHODNOCENI_A_DALSI_KROKY.md  claude_desktop_config.example.json  fastmcp.yaml  next.config.ts  package-lock.json  package.json  pyproject.toml  server_v4_pdf_fix.py  server_v4_reimbursement_fix.py  smithery.yaml  tailwind.config.ts  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: update-data.yml
.serena/: project.yml
.serena/memories/: SUKL_MCP_Analysis_Implementation_Plan.md  deep_analysis_report.md  fastmcp_comparison_report.md  implementation_plan.md  improvements_proposal.md  project_summary.md  roadmap.md  style_and_conventions.md  suggested_commands.md  task_completion_protocol.md
.specify/memory/: constitution.md
data/: dlp_atc.csv  dlp_cesty.csv  dlp_dopinglp.csv  dlp_latky.csv  dlp_lecivelatky.csv  dlp_narvla.csv  dlp_organizace.csv  dlp_platnost.csv  dlp_soli.csv  dlp_splp.csv  dlp_zruseneregistrace.csv  lekarny_prac_doba.csv  lekarny_seznam.csv
docs/: README.md  api-reference.md  architecture.md  data-reference.md  deployment.md  developer-guide.md  examples.md  index.md  multi-server-setup.md  sukl_api_dokumentace.md  user-guide.md
docs/plans/: 2026-02-15-epic1-production-ready.md  2026-02-15-epic2-advanced-features.md  2026-02-15-epics-roadmap-design.md  2026-02-17-epic2-advanced-features-design.md  2026-02-18-epic2-implementation-plan.md  2026-02-20-roadmap-status.md  2026-02-26-phase1-lead-capture-design.md
scripts/: build-pharmacies.ts  build-reimbursements.ts
specs/001-forms-resend-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-forms-resend-completion/checklists/: requirements.md
specs/001-forms-resend-completion/contracts/: newsletter-api.md
specs/001-production-ready/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-production-ready/checklists/: requirements.md
src/app/: globals.css  layout.tsx  page.tsx
src/components/: theme-toggle.tsx
src/components/demo/: tour-cta.tsx  (+9 more)
src/lib/: analytics.ts  demo-handler.ts  mcp-handler.ts  notion.ts  resend.ts  sukl-client.ts  types.ts
src/sukl_mcp/: __init__.py  __main__.py  client_api.py  client_csv.py  document_parser.py  exceptions.py  fuzzy_search 2.py  fuzzy_search.py  models.py  price_calculator.py  server.py  server.py.backup
sukl_mcp/: .dockerignore  .gitignore  DEPLOYMENT.md  DOCKER_BUILD_FIX.md  Dockerfile  FASTMCP_CLOUD_FIX.md  README.md  SMITHERY_DEPLOYMENT.md  fastmcp.yaml  smithery.yaml
sukl_mcp/tests/: test_async_io.py  test_validation.py
tests/: test_async_io.py  test_availability.py  test_document_parser.py  test_find_pharmacies_unit.py  test_fixes_2025_01_08.py  test_fixes_2025_01_08_direct.py  test_fixes_2025_01_08_final.py  test_fuzzy_search.py  test_get_atc_info_unit.py  test_integration.py  test_manual_fixes_phase1_phase2.py  test_performance_benchmark.py  test_price_calculator.py  test_resource_endpoints.py  test_rest_api_client.py
tests/api/: mcp-integration.test.ts
tests/lib/: demo-handler.test.ts  mcp-handler.test.ts  newsletter-route.test.ts
(+46 files in other folders)
