[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sukl-mcp-server"
version = "5.0.2"
description = "Production-ready FastMCP server s REST API podporou pro přístup k české databázi léčivých přípravků SÚKL"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FastMCP Community", email = "info@example.com" }
]
keywords = [
    "mcp",
    "fastmcp",
    "sukl",
    "medicines",
    "pharmacy",
    "healthcare",
    "czech",
    "pharmaceutical",
    "opendata",
    "ai-agents"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 2"
]
dependencies = [
    "fastmcp>=2.14.0,<3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    # REST API layer
    "tenacity>=8.0.0,<10.0.0",    # Retry with exponential backoff
    # Legacy CSV support (deprecated, will be removed in v5.0)
    "pandas>=2.0.0",
    # EPIC 1: Content Extractor
    "pypdf>=4.0.0,<6.0.0",        # PDF text extraction
    "python-docx>=1.1.0,<2.0.0",  # DOCX text extraction
    "async-lru>=2.0.0,<3.0.0",    # Async LRU caching with TTL
    # EPIC 2: Smart Search
    "rapidfuzz>=3.0.0,<4.0.0",    # Fuzzy string matching
    "pyarrow>=14.0.0",            # Pandas PyArrow backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.30.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.0.0",        # Type stubs for pandas
]
server = [
    "uvicorn>=0.27.0",
]
all = [
    "sukl-mcp-server[dev,server]",
]

[project.scripts]
sukl-mcp = "sukl_mcp.server:main"

[project.urls]
Homepage = "https://github.com/DigiMedic/SUKL-mcp"
Documentation = "https://github.com/DigiMedic/SUKL-mcp/tree/main/docs"
Repository = "https://github.com/DigiMedic/SUKL-mcp"
"Bug Tracker" = "https://github.com/DigiMedic/SUKL-mcp/issues"
"SÚKL Open Data" = "https://opendata.sukl.cz"
Changelog = "https://github.com/DigiMedic/SUKL-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sukl_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require network)",
]

[tool.coverage.run]
source = ["src/sukl_mcp"]
branch = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["httpx.*", "fastmcp.*"]
ignore_missing_imports = true
